fix small thing

--- a/jcse.html
+++ b/jcse.html
@@ -177,16 +177,16 @@
             Copyright &copy; 2023, nigger nigger - All Rights Reserved
           </p>
           <div class="social-list">
-            <a href="https://www.github.com/KaranChandekar" target="_blank"
-              ><i class="fab fa-github"></i
+            <a href="https://discord.gg/F2sdJDPmfV" target="_blank"
+              ><i class="fab fa-discord"></i
             ></a>
             <a
-              href="https://www.linkedin.com/in/karan-chandekar-a87263219/"
+              href="https://www.instagram.com/jcse_sustainables/"
               target="_blank"
-              ><i class="fab fa-linkedin"></i
+              ><i class="fab fa-instagram"></i
             ></a>
-            <a href="https://www.twitter.com/karanchandekar1" target="_blank"
-              ><i class="fab fa-twitter"></i
+            <a href="https://apps.apple.com/app/recycle-royale/id6446848447" target="_blank"
+              ><i class="fab fa-apple"></i
             ></a>
           </div>
         </div>
