Created recycle royale website, added images and made progress with mebmer list

--- a/recycle_royale.html
+++ b/recycle_royale.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recycle Royale</title>
-    <link rel="icon" type="image/x-icon" href="/images/jcse.ico">
+    <link rel="icon" type="image/x-icon" href="/images/recycleroyale.png">
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -41,8 +41,8 @@
           <img src="images/groupphoto.png" />
         </div>
         <div class="banner">
-          <h1>JCSE Sustainables</h1>
-          <p>kk not bad</p>
+          <h1>Recycle Royale</h1>
+          <p>The future of recycling</p>
         </div>
       </header>
       
@@ -55,6 +55,10 @@
             <a href="#about-us" class="menu-link" data-content="About Us"
               >About Us</a
             >
+          <li class="menu-item">
+            <a href="index.html" class="menu-link" data-content="JCSE"
+              >JCSE</a>
+            </li>
           </li>
           <li class="menu-item">
             <a href="#team" class="menu-link" data-content="Team">Team</a>
@@ -113,7 +117,7 @@
             </div>
             <div class="card-info">
               <h2>Kevin Sun</h2>
-              <h3>Head Developer</h3>
+              <h3>Founder, Head Designer, Head Developer</h3>
               <p>Email: 0214013@student.isf.edu.hk<br>
                 Discord: Kevin_#6986
             </p>
@@ -125,7 +129,7 @@
             </div>
             <div class="card-info">
               <h2>Harry Wang</h2>
-              <h3>Head Developer</h3>
+              <h3>AI and Backstage developer</h3>
               <p>Email: 0012113@student.isf.edu.hk<br>
                 Discord: Hewi#7649
             </p>
@@ -144,7 +148,80 @@
             </div>
           </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="cards-wrapper">
+          <div class="card">
+            <div class="card-img-wrapper">
+              <img src="images/edwin.png" alt="Edwin" />
+            </div>
+            <div class="card-info">
+              <h2>Edwin Fang</h2>
+              <h3>UI and Software Developer</h3>
+              <p>Email: 0012029@student.isf.edu.hk<br>
+                Discord: A_Bot#2064
+            </p>
+            </div>
+          </div>
+          <div class="card" data-tilt>
+            <div class="card-img-wrapper">
+              <img src="images/shu.png" alt="Shu" />
+            </div>
+            <div class="card-info">
+              <h2>Shu Liu</h2>
+              <h3>Promotions and arts</h3>
+              <p>Email: 0113020@student.isf.edu.hk<br>
+                Discord: SL#4897
+            </p>
+            </div>
+          </div>
+          <div class="card" data-tilt>
+            <div class="card-img-wrapper">
+              <img src="images/bill_chad.png" alt="Bill" />
+            </div>
+            <div class="card-info">
+              <h2>Bill Wu</h2>
+              <h3>Promotions and arts</h3>
+              <p>Email: 3315001@student.isf.edu.hk <br>
+                Discord: hobama#7847
+            </p>
+            </div>
+          </div>
+        </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="cards-wrapper">
+        <div class="card">
+          <div class="card-img-wrapper">
+            <img src="images/marcus.png" alt="Marcus" />
+          </div>
+          <div class="card-info">
+            <h2>Marcus Chan</h2>
+            <h3>Hardware Mechanic</h3>
+            <p>Email: 0012009@student.isf.edu.hk<br>
+              Discord: Dued#4453
+          </p>
+          </div>
+        </div>
+        <div class="card" data-tilt>
+          <div class="card-img-wrapper">
+            <img src="images/you.png" alt="You" />
+          </div>
+          <div class="card-info">
+            <h2>This could be you</h2>
+            <h3>Cool Role</h3>
+            <p>Email: Your_id@student.isf.edu.hk<br>
+              Discord: Your discord
+          </p>
+          </div>
+        </div>
       </section>
+
+      
 
       <section class="contact" id="contact">
         <div class="contact-wrapper">
@@ -173,7 +250,7 @@
       <footer class="footer">
         <div class="footer-content">
           <p class="copyright">
-            Copyright &copy; 2023, nigger nigger - All Rights Reserved
+            Copyright &copy; 2023, Recyle Royale - All Rights Reserved
           </p>
           <div class="social-list">
             <a href="https://discord.gg/F2sdJDPmfV" target="_blank"
