--- a/recycle_royale.html
+++ b/recycle_royale.html
@@ -42,7 +42,7 @@
         </div>
         <div class="banner">
           <h1>Recycle Royale</h1>
-          <p>The future of recycling</p>
+          <p>Rape Roger Recycling</p>
         </div>
       </header>
       
